Remove Optional wrapper for MeterRegistryAdapter properties
and some other minor refactoring